plugins {
    id 'java'
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.3'
//     id 'org.graalvm.buildtools.native' version '0.9.28'
}

group = 'com.jo'
version = '0.0.1'

// apply plugin: 'java'
// apply plugin: 'io.spring.dependency-management'
// apply plugin: 'java-library'

java {
	sourceCompatibility = '17'
	targetCompatibility = '17'
}

/* graalvmNative {
    binaries {
        main {
            buildArgs.add('--enable-preview')
        }
    }
} */

jar {
    enabled = false
}

repositories {
	mavenCentral()
}

ext {
	set('keycloakVersion', '21.1.1')
	set('postgresVersion', '42.6.0')
	set('junitJupiterVersion', '5.9.3')
	set('mockitoVersion', '5.3.1')
}

dependencies {
    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
//     implementation 'org.springframework.boot:spring-boot-docker-compose'

    // Database
    implementation "org.postgresql:postgresql:${postgresVersion}"

    // Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
    testImplementation 'com.h2database:h2'

    runtimeOnly 'com.h2database:h2'
}

test {
	useJUnitPlatform()
}
